prevent header wrapping

--- a/docs/xml.css
+++ b/docs/xml.css
@@ -37,6 +37,7 @@ table{
 
 th{
   text-align:center;
+  white-space: nowrap;
 }
 
 tr:not(.head){
